Bug 454838 - Spectacle doesn't remember selected area when using background mode
Summary: Spectacle doesn't remember selected area when using background mode
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 22.04.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-04 14:08 UTC by Frederick Zhang
Modified: 2022-10-03 14:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederick Zhang 2022-06-04 14:08:48 UTC
SUMMARY
Spectacle doesn't remember selected area when using background mode


STEPS TO REPRODUCE
1. Open Spectacle main GUI
2. Configure -> General -> set Remember selected area to Always
3. Apply and quit Spectacle
4. Run `spectacle -bcr` to select and copy a region

OBSERVED RESULT
Next time when I screenshot a region, via regular GUI or still `spectacle -bcr`, the default selected region is not what I selected last time.

EXPECTED RESULT
`spectacle -bcr` should update the remembered selected region for next use.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Kernel Version: 5.17.9-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Antonio Prcela 2022-06-16 21:42:23 UTC
unfortunately, works for me.
Spectacle 22.04.02
X11
Arch

mind share more details? are you using multiple monitors?
Comment 2 Frederick Zhang 2022-06-24 10:08:41 UTC
Oh sorry, I just realised instead of `spectacle -bcr`, my keyboard shortcut actually fires `spectacle -bcri`. I changed this a while ago to work around https://bugs.kde.org/show_bug.cgi?id=414739#c5.

I can confirm this issue does not happen without `-i`.
Comment 3 Antonio Prcela 2022-08-06 13:18:59 UTC
(In reply to Frederick Zhang from comment #2)
> Oh sorry, I just realised instead of `spectacle -bcr`, my keyboard shortcut
> actually fires `spectacle -bcri`. I changed this a while ago to work around
> https://bugs.kde.org/show_bug.cgi?id=414739#c5.
> 
> I can confirm this issue does not happen without `-i`.

can confirm with `-i`. Will take a look into it
Comment 4 Bug Janitor Service 2022-10-03 11:04:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/155
Comment 5 Bharadwaj Raju 2022-10-03 14:25:12 UTC
Git commit 1678cdb7df7bb205ce1df5cd92e7e0c953711f4d by Bharadwaj Raju.
Committed on 03/10/2022 at 14:24.
Pushed by bharadwaj-raju into branch 'master'.

Make sure we save settings on exit even in new-instance mode

Otherwise things like region won't be saved with spectacle -bcri for example.

M  +1    -0    src/Main.cpp

https://invent.kde.org/graphics/spectacle/commit/1678cdb7df7bb205ce1df5cd92e7e0c953711f4d