Make sure we save settings on exit even in new-instance mode

Otherwise things like region won't be saved with spectacle -bcri for example.

BUG: 454838